--- a/css/style.scss
+++ b/css/style.scss
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap');
+
 $oblue: #0d6fb8;
 $oblue2: #50a1df;
 
@@ -5,9 +7,7 @@ $oblue2: #50a1df;
     margin: 0;
     padding: 0;
     font-family: 'Montserrat', sans-serif;
-
 }
-//84 , p 48
 
 .navbar {
     height: 62px;
